[gd_scene load_steps=12 format=3 uid="uid://duh3wp7h0soq7"]

[ext_resource type="Script" path="res://scripts/Levels/MikutRoom.gd" id="1_fdl28"]
[ext_resource type="Texture2D" uid="uid://776qvlp3v323" path="res://Graphics/Levels/MikutsHome/MikutsHomeTilesetV2.png" id="1_uu2oi"]
[ext_resource type="Texture2D" uid="uid://bf70hbtoa7hdg" path="res://Graphics/Levels/MikutsHome/DrawerSprite.png" id="2_m5klx"]
[ext_resource type="PackedScene" uid="uid://pqf5hws2cd2n" path="res://Scenes/dialog_pointer.tscn" id="2_ysuox"]
[ext_resource type="Texture2D" uid="uid://dlux7wdx1gs7s" path="res://Graphics/Levels/MikutsHome/DeskSprite.png" id="3_kl1hi"]
[ext_resource type="Texture2D" uid="uid://mf14kl3v1mdu" path="res://Graphics/Levels/MikutsHome/BedSprite.png" id="4_ij4mu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o2csc"]
texture = ExtResource("1_uu2oi")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, -1.5, 32, -32, 32)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, -2, 32, -32, 32)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, 5, 32)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 6, -32, -32, 32)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 2, -32, -11.5, -9, -32, 32)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.5, -32, 32, -32, 32, 32, 16, -5)

[sub_resource type="TileSet" id="TileSet_0vj80"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 15
physics_layer_0/collision_mask = 15
sources/1 = SubResource("TileSetAtlasSource_o2csc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aioi3"]
size = Vector2(106, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nitpe"]
size = Vector2(121, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vovu1"]
size = Vector2(124, 77)

[node name="Node" type="Node"]
script = ExtResource("1_fdl28")

[node name="TileMap" type="TileMap" parent="."]
z_as_relative = false
y_sort_enabled = true
tile_set = SubResource("TileSet_0vj80")
format = 2
layer_0/name = "background"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(0, 65537, 0, 65536, 1, 0, 131072, 1, 1, 196608, 1, 2, 262144, 1, 3, 327680, 131073, 536870913, 1, 131073, 0, 65537, 131073, 0, 131073, 131073, 1, 196609, 131073, 2, 262145, 131073, 2, 327681, 131073, 536870913, 2, 196609, 0, 65538, 196609, 0, 131074, 196609, 1, 196610, 131073, 2, 262146, 131073, 2, 327682, 131073, 536870913, 3, 262145, 0, 65539, 262145, 1, 131075, 131073, 1, 196611, 131073, 2, 262147, 131073, 2, 327683, 131073, 536870913, 4, 327681, 0, 65540, 327681, 1, 131076, 196609, 1, 196612, 131073, 2, 262148, 131073, 2, 327684, 131073, 536870913, 5, 131073, 0, 65541, 196609, 0, 131077, 131073, 1, 196613, 131073, 2, 262149, 131073, 2, 327685, 131073, 536870913, 6, 196609, 0, 65542, 131073, 0, 131078, 196609, 1, 196614, 131073, 2, 262150, 131073, 2, 327686, 131073, 536870913, 7, 131073, 0, 65543, 196609, 0, 131079, 131073, 1, 196615, 131073, 2, 262151, 131073, 2, 327687, 131073, 536870913, 8, 393217, 0, 65544, 393217, 1, 131080, 196609, 1, 196616, 131073, 2, 262152, 131073, 2, 327688, 131073, 536870913, 9, 458753, 0, 65545, 458753, 1, 131081, 131073, 1, 196617, 131073, 2, 262153, 131073, 2, 327689, 131073, 536870913, 10, 196609, 0, 65546, 131073, 0, 131082, 196609, 1, 196618, 131073, 2, 262154, 131073, 2, 327690, 131073, 536870913, 11, 131073, 0, 65547, 196609, 0, 131083, 131073, 1, 196619, 131073, 2, 262155, 131073, 2, 327691, 131073, 536870913, 12, 524289, 0, 65548, 131073, 0, 131084, 524289, 1, 196620, 524289, 2, 262156, 524289, 3, 327692, 131073, 536870913)
layer_1/name = "foreground"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array()

[node name="Cupboard" type="StaticBody2D" parent="."]
position = Vector2(488, 172)

[node name="Sprite2D" type="Sprite2D" parent="Cupboard"]
scale = Vector2(3, 3)
texture = ExtResource("2_m5klx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cupboard"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_aioi3")

[node name="Desk" type="StaticBody2D" parent="."]
position = Vector2(169, 183)

[node name="Sprite2D" type="Sprite2D" parent="Desk"]
scale = Vector2(3, 3)
texture = ExtResource("3_kl1hi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Desk"]
position = Vector2(-1.5, -7)
shape = SubResource("RectangleShape2D_nitpe")

[node name="Bed" type="StaticBody2D" parent="."]
position = Vector2(699, 179)

[node name="Sprite2D" type="Sprite2D" parent="Bed"]
scale = Vector2(3, 3)
texture = ExtResource("4_ij4mu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bed"]
position = Vector2(-4, -0.5)
shape = SubResource("RectangleShape2D_vovu1")

[node name="DeskDialog" parent="." instance=ExtResource("2_ysuox")]
position = Vector2(168, 187)

[node name="BedDialog" parent="." instance=ExtResource("2_ysuox")]
position = Vector2(740, 274)

[node name="DoorDialog" parent="." instance=ExtResource("2_ysuox")]
position = Vector2(37, 180)

[connection signal="start_dialog" from="DeskDialog" to="." method="_on_desk_dialog_start_dialog"]
[connection signal="start_dialog" from="BedDialog" to="." method="_on_desk_dialog_start_dialog"]
[connection signal="start_dialog" from="DoorDialog" to="." method="_on_desk_dialog_start_dialog"]
